--- a/ChoreManager/app/src/main/res/layout/activity_chore_list.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_chore_list.xml
@@ -12,7 +12,9 @@
         android:layout_height="55dp"
         android:background="@color/colorAccent"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/choreListView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -56,19 +58,35 @@
             app:srcCompat="@drawable/filter_icon" />
     </LinearLayout>
 
+    <ListView
+        android:id="@+id/choreListView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="60dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
+
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:gravity="center_horizontal"
+        android:gravity="bottom|center_horizontal"
         android:orientation="horizontal"
         android:weightSum="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/choreListView">
 
         <Button
             android:id="@+id/createChore"
@@ -83,153 +101,4 @@
             android:text="@string/createChore" />
     </LinearLayout>
 
-    <ScrollView
-        android:id="@+id/scrollView4"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
-        app:layout_constraintVertical_bias="0.0">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/choreButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryDarkColor"
-                android:text="@string/chore_button"
-                android:textColor="@color/secondaryLightColor"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/choreText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryLightColor"
-                android:gravity="center_horizontal"
-                android:text="@string/chore_deadline2"
-                android:textColor="@color/secondaryTextColor" />
-
-            <Button
-                android:id="@+id/choreButton1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryDarkColor"
-                android:text="@string/chore_button1"
-                android:textColor="@color/secondaryLightColor"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/choreText1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryLightColor"
-                android:gravity="center_horizontal"
-                android:text="@string/chore_deadline1"
-                android:textColor="@color/secondaryTextColor" />
-
-            <Button
-                android:id="@+id/choreButton2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryDarkColor"
-                android:text="@string/chore_button2"
-                android:textColor="@color/secondaryLightColor"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/choreText2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryLightColor"
-                android:gravity="center_horizontal"
-                android:text="@string/chore_deadline2"
-                android:textColor="@color/secondaryTextColor" />
-
-            <Button
-                android:id="@+id/choreButton3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryDarkColor"
-                android:text="@string/chore_button3"
-                android:textColor="@color/secondaryLightColor"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/choreText3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryLightColor"
-                android:gravity="center_horizontal"
-                android:text="@string/chore_deadline2"
-                android:textColor="@color/secondaryTextColor" />
-
-            <Button
-                android:id="@+id/choreButton4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryDarkColor"
-                android:text="@string/chore_button4"
-                android:textColor="@color/secondaryLightColor"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/choreText4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryLightColor"
-                android:gravity="center_horizontal"
-                android:text="@string/chore_deadline2"
-                android:textColor="@color/secondaryTextColor" />
-
-            <Button
-                android:id="@+id/choreButton5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryDarkColor"
-                android:text="@string/chore_button5"
-                android:textColor="@color/secondaryLightColor"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/choreText5"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryLightColor"
-                android:gravity="center_horizontal"
-                android:text="@string/chore_deadline2"
-                android:textColor="@color/secondaryTextColor" />
-
-            <Button
-                android:id="@+id/choreButton6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryDarkColor"
-                android:text="@string/chore_button6"
-                android:textColor="@color/secondaryLightColor"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/choreText6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/secondaryLightColor"
-                android:gravity="center_horizontal"
-                android:text="@string/chore_deadline2"
-                android:textColor="@color/secondaryTextColor" />
-
-        </LinearLayout>
-
-    </ScrollView>
 </android.support.constraint.ConstraintLayout>
