--- a/ChoreManager/app/src/main/res/layout/activity_new_chore.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_new_chore.xml
@@ -166,6 +166,30 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/totalPointsText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical|center_horizontal|center"
+                        android:text="@string/string_total_points"
+                        android:textSize="20sp" />
+
+                    <Spinner
+                        android:id="@+id/totalPointsSpinner"
+                        style="@style/Widget.AppCompat.Spinner.Underlined"
+                        android:layout_width="0dp"
+                        android:layout_height="45dp"
+                        android:layout_weight="1" />
+
+                </LinearLayout>
+
                 <Button
                     android:id="@+id/deadlineButton"
                     android:layout_width="match_parent"
