--- a/ChoreManager/app/src/main/res/layout/chore_list_item.xml
+++ b/ChoreManager/app/src/main/res/layout/chore_list_item.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:onClick="clickOnSpecificChore"
         android:textSize="20sp" />
 
 </LinearLayout>
